--- a/F411-Multiproposito.ioc
+++ b/F411-Multiproposito.ioc
@@ -5,8 +5,8 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -78,8 +78,8 @@ Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=6.11.1
-MxDb.Version=DB.6.0.111
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -101,11 +101,13 @@ PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=Q0.1
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA1.GPIO_Label=MBUS_CTRL
 PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA1.GPIO_PuPd=GPIO_NOPULL
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
 PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=WIFI_RX
@@ -196,9 +198,10 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=ETH_NSS
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=PinState,GPIO_Label
 PB7.GPIO_Label=ETH_RST
 PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
 PB7.Signal=GPIO_Output
 PB9.GPIOParameters=PinState,GPIO_Label
 PB9.GPIO_Label=LR_RST
@@ -220,6 +223,7 @@ PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -227,7 +231,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411CEUx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -287,8 +291,8 @@ SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI3.CalculateBaudRate=12.5 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.CalculateBaudRate=6.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
@@ -315,7 +319,8 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART6.IPParameters=VirtualMode
+USART6.IPParameters=VirtualMode,Mode
+USART6.Mode=MODE_TX_RX
 USART6.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
