--- a/F411-Multiproposito.ioc
+++ b/F411-Multiproposito.ioc
@@ -97,8 +97,9 @@ NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_Label
 PA0-WKUP.GPIO_Label=Q0.1
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -166,16 +167,19 @@ PB12.GPIO_Label=ETH_SCK
 PB12.Locked=true
 PB12.Mode=Full_Duplex_Master
 PB12.Signal=SPI3_SCK
-PB13.GPIOParameters=GPIO_Label
+PB13.GPIOParameters=GPIO_Speed,GPIO_Label
 PB13.GPIO_Label=FALLA
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Locked=true
 PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=CNN
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_Speed,GPIO_Label
 PB15.GPIO_Label=ALIM
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
@@ -208,9 +212,10 @@ PB9.GPIO_Label=LR_RST
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_RESET
 PB9.Signal=GPIO_Output
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=Q0.0
 PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_RESET
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -236,7 +241,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
